# smt-revocation

./: Cargo.toml  README.md
benches/: benchmark_main.rs
comparison/: compare.ipynb
src/: lib.rs  main.rs
src/ledger/: mod.rs
src/node/: mod.rs
src/snark/: mod.rs
