[package]
name = "smt-revocation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monotree = "0.1.5"
bellman = "0.14.0"
pairing = "0.23.0"
ff = "0.13.0"
rand = "0.8.0"
bls12_381 = "0.8.0"
serde = {version = "1.0.193", features =["derive"]}
blake3 = "1.5.0"
bincode = "1.3.3"
hex = "0.4.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark_main"
harness = false
